# pomodoro

./: .gitignore  Cargo.toml  README.md  download_sounds.bat  download_sounds.sh
src/: cli.rs  db.rs  main.rs  notification.rs  pomodoro.rs  sound.rs  stats_chart.rs
