[package]
name = "pomodoro-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A CLI Pomodoro timer application with SQLite logging"

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }   # SQLite database
chrono = "0.4.23"        # Date and time
clap = { version = "4.1.4", features = ["derive"] } # Command line argument parsing
crossterm = "0.25.0"     # Terminal manipulation
notify-rust = "4.5.10"   # Desktop notifications
thiserror = "1.0.38"     # Error handling
tokio = { version = "1.25.0", features = ["full"] } # Async runtime
rodio = "0.17.1"        # Audio playback
